--- a/MyChatApp/app/src/main/res/layout/activity_register.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_register.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/edtName"
+            android:id="@+id/edtTenHienThiDangKy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nhập Tên hiển thị" />
