--- a/MyChatApp/app/src/main/res/layout/activity_settings.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_settings.xml
@@ -33,7 +33,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:gravity="center"
-        android:text="Tên hiển thị"
+        android:text="Tên Hiển Thị"
         android:textColor="#000000"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -52,7 +52,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="Xin chào! Tôi đang sử dụng My App Chat"
+        android:text="Tôi đang sử dụng My App Chat!"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,18 +80,18 @@
 
     <Button
         android:id="@+id/btnCapNhatTrangThai"
-        android:background="@drawable/custom_button_2"
-        android:textSize="20dp"
-        android:textColor="#006fff"
-        android:textStyle="bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/custom_button_2"
         android:text="Cập nhật trạng thái"
+        android:textColor="#006fff"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
