--- a/MyChatApp/app/src/main/res/menu/main_menu.xml
+++ b/MyChatApp/app/src/main/res/menu/main_menu.xml
@@ -6,8 +6,8 @@
         android:id="@+id/main_setting_item"
         android:title="Thiết Lập Tài Khoản" />
     <item
-        android:id="@+id/main_all_item"
-        android:title="Tất Cả Người Dùng" />
+        android:id="@+id/main_users_item"
+        android:title="Xem Người Dùng" />
     <item
         android:id="@+id/main_logout_item"
         android:title="Đăng Xuất" />
