--- a/ChatApp/app/src/main/res/layout/chat_custom_bar.xml
+++ b/ChatApp/app/src/main/res/layout/chat_custom_bar.xml
@@ -29,6 +29,7 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/custom_profile_image"
+        android:layout_marginRight="5dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignBottom="@+id/custom_user_last_seen"
